[gd_scene load_steps=55 format=3 uid="uid://c4vhr7f4bagfy"]

[ext_resource type="Script" path="res://CharacterSelect/CharacterSelect.gd" id="1_k4qlc"]
[ext_resource type="FontFile" uid="uid://tdbx4x0pdbd3" path="res://gunplay rg.otf" id="2_e1jui"]
[ext_resource type="Texture2D" uid="uid://b1hhfnni7qp14" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_1.png" id="2_m1ru4"]
[ext_resource type="Texture2D" uid="uid://b2jmb1836bpu3" path="res://BlueRock.jpg" id="2_q6w3c"]
[ext_resource type="Texture2D" uid="uid://bt8co1q8q86v1" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_2.png" id="3_lw5yj"]
[ext_resource type="Texture2D" uid="uid://bjy5in0gcbqic" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_3.png" id="4_5xpe1"]
[ext_resource type="Texture2D" uid="uid://bme0fr8pe56ao" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_4.png" id="5_kdls8"]
[ext_resource type="Texture2D" uid="uid://cb2idcicku5ln" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_5.png" id="6_qr4sb"]
[ext_resource type="Texture2D" uid="uid://bkefoud6sbe76" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_6.png" id="7_dnsno"]
[ext_resource type="Texture2D" uid="uid://deqmg7r4abqbs" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_7.png" id="8_uad4b"]
[ext_resource type="Texture2D" uid="uid://bmt3ntwb8yspv" path="res://Art/Characters/Fire Knight/Movement/01_idle/idle_8.png" id="9_00hbk"]
[ext_resource type="Texture2D" uid="uid://blat20pfv1il5" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_1.png" id="10_8k38t"]
[ext_resource type="Texture2D" uid="uid://deec6a1m2vxt8" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_2.png" id="11_50o3u"]
[ext_resource type="Texture2D" uid="uid://cm4y5gcv6amof" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_3.png" id="12_jqsr2"]
[ext_resource type="Texture2D" uid="uid://bo4g5us08mm1v" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_4.png" id="13_vhgva"]
[ext_resource type="Texture2D" uid="uid://7hyb26i2p0hq" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_5.png" id="14_h2l2w"]
[ext_resource type="Texture2D" uid="uid://cv4s308n7cvn3" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_6.png" id="15_odp8p"]
[ext_resource type="Texture2D" uid="uid://d3pus6qfbedev" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_7.png" id="16_3jmbc"]
[ext_resource type="Texture2D" uid="uid://odmlunt072ns" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_8.png" id="17_q8nhy"]
[ext_resource type="Texture2D" uid="uid://cdvwp7fosc520" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_9.png" id="18_txcvf"]
[ext_resource type="Texture2D" uid="uid://bwr6qo0ssbe2g" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_10.png" id="19_o1eqa"]
[ext_resource type="Texture2D" uid="uid://nc1ei638sbys" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_11.png" id="20_gplh7"]
[ext_resource type="Texture2D" uid="uid://c86oj2j1ifotg" path="res://Art/Characters/Leaf Ranger/Movement/idle/idle_12.png" id="21_ssau7"]
[ext_resource type="Texture2D" uid="uid://bpnkyysewyeen" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_1.png" id="22_pruw1"]
[ext_resource type="Texture2D" uid="uid://djuwepbmae2pl" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_2.png" id="23_1e1k6"]
[ext_resource type="Texture2D" uid="uid://c1xcw571eppcl" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_3.png" id="24_m6n7c"]
[ext_resource type="Texture2D" uid="uid://cgpte0gqejmxn" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_4.png" id="25_mi76r"]
[ext_resource type="Texture2D" uid="uid://dpk7irlsoh1ox" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_5.png" id="26_1vg7q"]
[ext_resource type="Texture2D" uid="uid://bf858cbt8unv3" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_6.png" id="27_sly1e"]
[ext_resource type="Texture2D" uid="uid://dw6sm5bkqcni7" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_7.png" id="28_x4j8i"]
[ext_resource type="Texture2D" uid="uid://cj6bwke0vtpad" path="res://Art/Characters/Metal Bladesmith/Movement/01_idle/01_idle_8.png" id="29_o0bdl"]
[ext_resource type="Texture2D" uid="uid://bwgj6uw8sbbgh" path="res://Art/Characters/Monk Assets/Movement/idle/idle_1.png" id="30_l52kp"]
[ext_resource type="Texture2D" uid="uid://5xrs7vwgb1oh" path="res://Art/Characters/Monk Assets/Movement/idle/idle_2.png" id="31_nbeu2"]
[ext_resource type="Texture2D" uid="uid://cfes3dnum4eic" path="res://Art/Characters/Monk Assets/Movement/idle/idle_3.png" id="32_wuu4h"]
[ext_resource type="Texture2D" uid="uid://2q2usirmgq4n" path="res://Art/Characters/Monk Assets/Movement/idle/idle_4.png" id="33_t1ky7"]
[ext_resource type="Texture2D" uid="uid://bl00gxs3pvxv0" path="res://Art/Characters/Monk Assets/Movement/idle/idle_5.png" id="34_ks7eh"]
[ext_resource type="Texture2D" uid="uid://b3ee570jamyl4" path="res://Art/Characters/Monk Assets/Movement/idle/idle_6.png" id="35_qe763"]
[ext_resource type="Texture2D" uid="uid://1udbhyj4jh02" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_1.png" id="36_xti1s"]
[ext_resource type="Texture2D" uid="uid://bhcm70gxu2tnw" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_2.png" id="37_0ba7a"]
[ext_resource type="Texture2D" uid="uid://bmp0gxfxsbxfy" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_3.png" id="38_j4q0k"]
[ext_resource type="Texture2D" uid="uid://dtvsmfa88s33x" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_4.png" id="39_2sng4"]
[ext_resource type="Texture2D" uid="uid://bx1m6284upasq" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_5.png" id="40_saj6h"]
[ext_resource type="Texture2D" uid="uid://co03psm4ukcuc" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_6.png" id="41_q5xyj"]
[ext_resource type="Texture2D" uid="uid://c20nl3o33unvn" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_7.png" id="42_5aok7"]
[ext_resource type="Texture2D" uid="uid://dd5gjdtddkj8a" path="res://Art/Characters/Water Priestess/Movement/01_idle/idle_8.png" id="43_vnbeu"]
[ext_resource type="Texture2D" uid="uid://ce66htawnxyax" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_1.png" id="44_oijjl"]
[ext_resource type="Texture2D" uid="uid://dcc1a5dobxjfr" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_2.png" id="45_71nal"]
[ext_resource type="Texture2D" uid="uid://dn336ijvd75ca" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_3.png" id="46_puk7x"]
[ext_resource type="Texture2D" uid="uid://dod3glet4at31" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_4.png" id="47_kjrlg"]
[ext_resource type="Texture2D" uid="uid://dt63nbheqjpl4" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_5.png" id="48_fbxhg"]
[ext_resource type="Texture2D" uid="uid://b6xyaa3e51lii" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_6.png" id="49_gwv8m"]
[ext_resource type="Texture2D" uid="uid://bp0km4kchvnv1" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_7.png" id="50_jg2xl"]
[ext_resource type="Texture2D" uid="uid://bht6rlkkcs3n4" path="res://Art/Characters/Wind Hashira/Movement/idle/idle_8.png" id="51_quvch"]

[sub_resource type="SpriteFrames" id="SpriteFrames_75we3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m1ru4")
}, {
"duration": 1.0,
"texture": ExtResource("3_lw5yj")
}, {
"duration": 1.0,
"texture": ExtResource("4_5xpe1")
}, {
"duration": 1.0,
"texture": ExtResource("5_kdls8")
}, {
"duration": 1.0,
"texture": ExtResource("6_qr4sb")
}, {
"duration": 1.0,
"texture": ExtResource("7_dnsno")
}, {
"duration": 1.0,
"texture": ExtResource("8_uad4b")
}, {
"duration": 1.0,
"texture": ExtResource("9_00hbk")
}],
"loop": true,
"name": &"Player0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_8k38t")
}, {
"duration": 1.0,
"texture": ExtResource("11_50o3u")
}, {
"duration": 1.0,
"texture": ExtResource("12_jqsr2")
}, {
"duration": 1.0,
"texture": ExtResource("13_vhgva")
}, {
"duration": 1.0,
"texture": ExtResource("14_h2l2w")
}, {
"duration": 1.0,
"texture": ExtResource("15_odp8p")
}, {
"duration": 1.0,
"texture": ExtResource("16_3jmbc")
}, {
"duration": 1.0,
"texture": ExtResource("17_q8nhy")
}, {
"duration": 1.0,
"texture": ExtResource("18_txcvf")
}, {
"duration": 1.0,
"texture": ExtResource("19_o1eqa")
}, {
"duration": 1.0,
"texture": ExtResource("20_gplh7")
}, {
"duration": 1.0,
"texture": ExtResource("21_ssau7")
}],
"loop": true,
"name": &"Player1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_pruw1")
}, {
"duration": 1.0,
"texture": ExtResource("23_1e1k6")
}, {
"duration": 1.0,
"texture": ExtResource("24_m6n7c")
}, {
"duration": 1.0,
"texture": ExtResource("25_mi76r")
}, {
"duration": 1.0,
"texture": ExtResource("26_1vg7q")
}, {
"duration": 1.0,
"texture": ExtResource("27_sly1e")
}, {
"duration": 1.0,
"texture": ExtResource("28_x4j8i")
}, {
"duration": 1.0,
"texture": ExtResource("29_o0bdl")
}],
"loop": true,
"name": &"Player2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_l52kp")
}, {
"duration": 1.0,
"texture": ExtResource("31_nbeu2")
}, {
"duration": 1.0,
"texture": ExtResource("32_wuu4h")
}, {
"duration": 1.0,
"texture": ExtResource("33_t1ky7")
}, {
"duration": 1.0,
"texture": ExtResource("34_ks7eh")
}, {
"duration": 1.0,
"texture": ExtResource("35_qe763")
}],
"loop": true,
"name": &"Player3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_xti1s")
}, {
"duration": 1.0,
"texture": ExtResource("37_0ba7a")
}, {
"duration": 1.0,
"texture": ExtResource("38_j4q0k")
}, {
"duration": 1.0,
"texture": ExtResource("39_2sng4")
}, {
"duration": 1.0,
"texture": ExtResource("40_saj6h")
}, {
"duration": 1.0,
"texture": ExtResource("41_q5xyj")
}, {
"duration": 1.0,
"texture": ExtResource("42_5aok7")
}, {
"duration": 1.0,
"texture": ExtResource("43_vnbeu")
}],
"loop": true,
"name": &"Player4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_oijjl")
}, {
"duration": 1.0,
"texture": ExtResource("45_71nal")
}, {
"duration": 1.0,
"texture": ExtResource("46_puk7x")
}, {
"duration": 1.0,
"texture": ExtResource("47_kjrlg")
}, {
"duration": 1.0,
"texture": ExtResource("48_fbxhg")
}, {
"duration": 1.0,
"texture": ExtResource("49_gwv8m")
}, {
"duration": 1.0,
"texture": ExtResource("50_jg2xl")
}, {
"duration": 1.0,
"texture": ExtResource("51_quvch")
}],
"loop": true,
"name": &"Player5",
"speed": 5.0
}]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource("1_k4qlc")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1921.0
offset_bottom = 1084.0
texture = ExtResource("2_q6w3c")

[node name="Label" type="Label" parent="."]
offset_left = 407.0
offset_top = 175.0
offset_right = 1536.0
offset_bottom = 315.0
theme_override_fonts/font = ExtResource("2_e1jui")
theme_override_font_sizes/font_size = 100
text = "CHARACTER SELECTION"
metadata/_edit_use_anchors_ = true

[node name="PlayerSelect" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(719.032, 300.316)
scale = Vector2(5.90994, 5.58307)
sprite_frames = SubResource("SpriteFrames_75we3")
animation = &"Player1"
autoplay = "Player0"

[node name="Descript" type="Label" parent="PlayerSelect"]
offset_left = -29.7858
offset_top = 76.6037
offset_right = 43.2142
offset_bottom = 106.604
theme_override_font_sizes/font_size = 15
text = "Default"

[node name="Left" type="Button" parent="."]
offset_left = 144.0
offset_top = 552.0
offset_right = 182.0
offset_bottom = 583.0
scale = Vector2(5.08, 3.4)
text = "<-"

[node name="Right" type="Button" parent="."]
offset_left = 1040.0
offset_top = 552.0
offset_right = 1089.0
offset_bottom = 583.0
scale = Vector2(4.44, 3.76)
text = "->"

[node name="Ready" type="Button" parent="."]
offset_left = 1427.0
offset_top = 558.0
offset_right = 1483.0
offset_bottom = 589.0
scale = Vector2(4.72748, 3.90506)
theme_override_fonts/font = ExtResource("2_e1jui")
text = "Ready"

[node name="Back" type="Button" parent="."]
offset_left = 40.0
offset_top = 952.0
offset_right = 209.0
offset_bottom = 983.0
scale = Vector2(2.68, 3.41641)
theme_override_fonts/font = ExtResource("2_e1jui")
text = "Back to Main Menu"

[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
